[tool.poetry]
name = "gpkgstatus"
version = "0.4-beta"
description = "Get Current Package Status from Fedora Updates System"
author = "Dhanush Kovi"
license = "GPL-2.0"
requires-python = "^3.8"

[tool.poetry.metadata]
keywords = [
    "fedora",
    "updates",
    "package",
    "status",
    "fedora-updates",
    "gpkgstatus",
    "bodhi"
]

classifiers = [
    "Development Status :: 0.4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: All",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
altgraph = "^0.17.3"
certifi = "^2022.12.7"
charset-normalizer = "^3.0.1"
idna = "^3.4"
pyinstaller = "^5.7.0"
pyinstaller-hooks-contrib = "^2022.15"
requests = "^2.28.2"
termcolor = "^2.2.0"
urllib3 = "^1.26.14"

[tool.poetry.dev-dependencies]
altgraph = "*"
certifi = "*"
charset-normalizer = "*"
idna = "*"
pyinstaller = "*"
pyinstaller-hooks-contrib = "*"
requests = "*"
termcolor = "*"
urllib3 = "*"

[tool.poetry.urls]
repo = "https://github.com/dkvc/gpkgstatus"